<resources>
    <string name="app_name">PyTorchDemo_HARNAS</string>
    <string name="action_settings">Settings</string>
    <string name="welcome_skip_button">Skip</string>
    <string name="main_nlp_button">Language</string>
    <string name="main_har_button">Latency LookUp Table</string>
    <string name="main_rt_har_button">Model List</string>


    <string name="rt_har_card_operator_title">\nOperators runtime </string>
    <string name="rt_har_card_operator_description">\nOperator Type\n C_in C_out kernel stride dilation.</string>
    <string name="rt_har_card_models_title">\nModels runtime </string>
    <string name="rt_har_card_models_description">\nModels Type\n C_in C_out kernel stride dilation.</string>
    <string name="rt_har_card_cnn2018_title">\nRT-CNN 2018 model </string>
    <string name="rt_har_card_cnn2018_description">\nBlockType\n C_in C_out kernel stride dilation.</string>
    <string name="rt_har_card_cnn2020_title">\nRT-CNN 2020 model </string>
    <string name="rt_har_card_cnn2020_description">\n[2020 Mobile Net. App.] Deep learning models for real-time human activity recognition with smartphones.</string>
    <string name="rt_har_card_cnn2020_shift_title">\nRT-CNN 2020 model + Shift </string>
    <string name="rt_har_card_cnn2020_shift_description">\n....</string>
    <string name="rt_har_card_innohar_title">\nInnoHAR</string>
    <string name="rt_har_card_innohar_description">\n[2019 IEEE Access] InnoHAR: a deep neural network for complex human activity recognition.</string>
    <string name="rt_har_card_inception_cnn_title">\nRT-CNN 2020 model with Inception-like module.</string>
    <string name="rt_har_card_inception_cnn_description">\nWhere Inception-like module is from InnoHAR.</string>
    <string name="rt_har_card_resnet_title">\nResNet for Time Series Classification.</string>
    <string name="rt_har_card_resnet_description">\n[2019 Data Min. Knowl. Discov.] Deep learning for time series classification: a review.</string>
    <string name="rt_har_card_resshift_title">\nResShift.</string>
    <string name="rt_har_card_resshift_description">\nIn ResNet, convolution was replaced with shift operation.</string>
    <string name="rt_har_card_resmixshift_title">\nResMixShift.</string>
    <string name="rt_har_card_resmixshift_description">\nIt can extract multi-timescale features.</string>

    <string name="rt_har_card_kuhar_title">\nKUHAR dataset </string>
    <string name="rt_har_card_kuhar_description">\nInput:(1,6,300)</string>
    <string name="rt_har_card_widsm2019_title">\nWISDM2019 dataset </string>
    <string name="rt_har_card_widsm2019_description">\nInput:(1,6,200)</string>
    <string name="rt_har_card_wisdm_title">\nWISDM dataset </string>
    <string name="rt_har_card_wisdm_description">\nInput:(1,3,60) </string>
    <string name="rt_har_card_uci_har_title">\nUCIHAR dataset </string>
    <string name="rt_har_card_uci_har_description">\nInput:(1,6,128) </string>
    <string name="rt_har_card_unimib_shar_title">\nUniMiB-SHAR dataset </string>
    <string name="rt_har_card_unimib_shar_description">\nInput:(1,3,151).\n[2017 App. Sci.] Unimib shar: A dataset for human activity recognition using acceleration data from smartphones. </string>
    <string name="rt_har_card_opportunity_title">\nOPPORTUNITY dataset </string>
    <string name="rt_har_card_opportunity_description">\nInput:(1,113,16).\n[2013 Pattern Recognit. Lett.] The Opportunity challenge: A benchmark database for on-body sensor-based activity recognition. </string>
    <string name="rt_har_card_pamap2_title">\nPAMAP2 dataset </string>
    <string name="rt_har_card_pamap2_description">\nInput:(1,31,512).\n[2012 ISWC] Introducing a New Benchmarked Dataset for Activity Monitoring. </string>

    <string-array name="repeat_count_array">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>5</item>
        <item>10</item>
        <item>50</item>
        <item>100</item>
    </string-array>

    <string name="error_dialog_text">Sorry, error</string>
    <string name="clear">Clear</string>
    <string name="next">Next</string>
    <string name="run">Run</string>

    <string name="activity">Activity</string>
    <string name="probability">Probability</string>
    <string name="walking">Walking</string>
    <string name="upstairs">Upstairs</string>
    <string name="downstairs">Downstairs</string>
    <string name="sitting">Sitting</string>
    <string name="standing">Standing</string>
    <string name="lying">Lying</string>
    <string name="latency">Latency</string>
    <string name="print">print</string>
    <string name="button">Button</string>

</resources>
